# paraloom-core

./: .env.example  .gitignore  .snyk  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml  deny.toml  paraloom-534-analysis.md  renovate.json  start-windows-validator.bat
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request_template.md
.github/workflows/: bridge-e2e.yml  cargo-deny.yml  ci.yaml  circuit-freeze.yml  codeql.yml  fuzz.yml  programs.yml  release.yml  snyk.yml  stale.yml
ceremony/transfer/: README.md  SHA256SUMS  transfer_ceremony_verifying.key
ceremony/withdraw/: README.md  SHA256SUMS  withdraw_ceremony_proving.key  withdraw_ceremony_verifying.key  withdraw_v2_initial_proving.key
config/: mac-coordinator.toml  node1.toml  node2.toml  windows-validator.toml
docs/: audit-260-settlement-quorum.md  bug-bounty.md  private-swap-demo.md  security-log.md
examples/: network_job_test.rs  private_compute_demo.rs  simple_job.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: merkle_path_verify.rs  proof_codec_decode.rs  wasm_output_len.rs
programs/paraloom/: Cargo.toml
programs/paraloom/src/: groth16.rs  lib.rs  merkle_tree.rs  quorum.rs  transact_fixture_data.rs  transact_verifier.rs  transact_vk_data.rs  transfer_fixture_data.rs  transfer_verifier.rs  transfer_vk_data.rs  withdraw_fixture_data.rs  withdraw_spl_fixture_data.rs  withdraw_verifier.rs  withdraw_vk_data.rs
programs/paraloom/tests/: claim_rewards_test.rs  deposit_note_test.rs  deposit_test.rs  deposit_withdraw_spl_test.rs  distribute_fee_test.rs  dual_stake_test.rs  initialize_merkle_tree_test.rs  initialize_test.rs  initialize_unauthorized_test.rs  instruction_wire_test.rs  migrate_validator_account_test.rs  pause_test.rs  pending_rewards_before_close_test.rs  reset_validator_registry_test.rs  set_bridge_authority_test.rs  shielded_transfer_test.rs  slash_validator_test.rs  transact_test.rs  unpause_test.rs  unregister_validator_test.rs  update_merkle_root_test.rs  update_reputation_test.rs  validator_registry_test.rs  withdraw_canonical_nullifier_test.rs  withdraw_quorum_test.rs  withdraw_replay_test.rs  withdraw_requires_validator_test.rs  withdraw_test.rs  withdraw_unbonded_stake_test.rs
programs/paraloom/tests/common/: mod.rs
scripts/: demo.sh  start.sh
scripts/devnet/: validator.toml.example  validator1.toml  validator2.toml  validator3.toml
scripts/localnet/: private_swap_fork.sh  validator1.toml  validator2.toml  validator3.toml  validator4.toml  validator5.toml
src/: lib.rs
src/bridge/: error.rs  mod.rs  types.rs
src/bridge/solana/: cosign_assembly.rs  cosign_message.rs  decoder.rs  instructions.rs  keypair.rs  listener.rs  mod.rs  program.rs  rpc.rs  submitter.rs  test_support.rs
src/ceremony/: bgm17.rs  contribute.rs  mod.rs  policy.rs  transcript.rs  verifier.rs
src/compute/: auth.rs  compute_circuit.rs  confidential_inference.rs  distribution.rs  engine.rs  executor.rs  gcp_attestation.rs  granite_model.rs  job.rs  manager.rs  mod.rs  private_job.rs  verification.rs
src/compute/test_data/: attestation_test_priv.pem  attestation_test_pub.pem
src/config/: mod.rs  settings.rs
src/consensus/: leader.rs  mod.rs  reputation.rs  slashing.rs  transact.rs  transfer.rs  vote_tally.rs  withdrawal.rs
src/coordinator/: mod.rs  role.rs
src/health/: mod.rs
src/network/: compute_protocol.rs  cosign.rs  discovery.rs  heartbeat.rs  message.rs  mod.rs  protocol.rs  req_resp.rs
src/node/: cosign_round.rs  ingress_auth.rs  mod.rs  transact_ingress.rs  transfer_ingress.rs  withdrawal_ingress.rs
src/privacy/: batch.rs  circuit_benchmark.rs  circuits.rs  commitment.rs  error.rs  integration_tests.rs  merkle.rs  mod.rs  note_crypto.rs  nullifier.rs  onchain_verifier.rs  path_server.rs  pedersen.rs  pool.rs  poseidon.rs  poseidon_circom.rs  proof.rs  proof_codec.rs  sparse_merkle.rs  transaction.rs  types.rs  verification.rs
src/relayer/: jupiter.rs  mod.rs  onchain.rs  private_swap.rs
src/resource/: mod.rs  monitor.rs
src/storage/: blockchain.rs  compute_store.rs  mod.rs  privacy.rs
src/task/: mod.rs
src/types/: mod.rs  primitives.rs
src/utils/: mod.rs
src/validator/: mod.rs
src/web/: api.rs  mod.rs  server.rs
tests/: bridge_e2e_auth.rs  bridge_e2e_consensus.rs  bridge_e2e_smoke.rs  bridge_tests.rs  byzantine_consensus.rs  compute_integration_test.rs  compute_wasm_execution_test.rs  consensus_integration_test.rs  consensus_network_e2e.rs  coordinator_tests.rs  cosign_e2e.rs  cosign_settlement_e2e.rs  network_partition.rs  network_tests.rs  node_compute_integration_test.rs  privacy_integration_test.rs  privacy_integration_tests.rs  privacy_invariants.rs  relay_reservation_e2e.rs  storage_tests.rs  task_tests.rs  test_poseidon_circuit.rs  transact_cosign_e2e.rs  transfer_consensus_network_e2e.rs  transfer_proof_canonical.rs  validator_privacy_e2e.rs  vote_authenticity_test.rs  withdrawal_proof_canonical.rs
tests/common/: mod.rs  solana_validator.rs
web/: dashboard.html
