[package]
name = "paraloom"
version = "0.1.0"
authors = ["Paraloom Team"]
edition = "2021"
license = "MIT"
description = "A distributed sidechain solution for the Solana ecosystem"

[lib]
name = "paraloom"
path = "src/lib.rs"

[[bin]]
name = "paraloom-node"
path = "src/bin/node.rs"

[[bin]]
name = "resource_test"
path = "src/bin/resource_test.rs"

[[bin]]
name = "node_test"
path = "src/bin/node_test.rs"

[dependencies]
# Core networking
libp2p = { version = "0.50.0", features = ["tokio", "tcp", "noise", "mplex", "gossipsub"] }
tokio = { version = "1.25.0", features = ["full"] }

# Serialization & Data handling
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
bincode = "1.3.3"

# Storage
rocksdb = "0.23.0"

# Logging & error handling
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"
anyhow = "1.0.69"

# CLI 
clap = { version = "4.1.8", features = ["derive"] }
config = "0.13.3"
toml = "0.7.3"

# Utilities
futures = "0.3.26"
async-trait = "0.1.64"
once_cell = "1.17.1"

# Other
sysinfo = "0.29.0"

[dev-dependencies]
tokio-test = "0.4.2"
tempfile = "3.3.0"
