[workspace]
members = [
    "."
]
exclude = [
    "programs/paraloom"  # Separate build - has different Anchor/Solana version requirements
]
resolver = "2"

[package]
name = "paraloom"
version = "0.1.0"
authors = ["Paraloom Team"]
edition = "2021"
license = "MIT"
description = "A distributed sidechain solution for the Solana ecosystem"

[lib]
name = "paraloom"
path = "src/lib.rs"

[[bin]]
name = "paraloom-node"
path = "src/bin/node.rs"

[[bin]]
name = "resource_test"
path = "src/bin/resource_test.rs"

[[bin]]
name = "node_test"
path = "src/bin/node_test.rs"

[[bin]]
name = "task-demo"
path = "src/bin/task_demo.rs"

[[bin]]
name = "submit-task"
path = "src/bin/submit_task.rs"

[[bin]]
name = "web-demo"
path = "src/bin/web_demo.rs"

[[bin]]
name = "benchmark-reqresp"
path = "src/bin/benchmark_reqresp.rs"

[[bin]]
name = "bridge-init"
path = "src/bin/bridge_init.rs"

[[bin]]
name = "test-deposit"
path = "src/bin/test_deposit.rs"

[[bin]]
name = "test-withdraw"
path = "src/bin/test_withdraw.rs"

[[bin]]
name = "compute-demo"
path = "src/bin/compute_demo.rs"

[[bin]]
name = "setup_compute_ceremony"
path = "src/bin/setup_compute_ceremony.rs"

[[bin]]
name = "paraloom"
path = "src/bin/paraloom_cli.rs"

# Privacy/zkSNARK binaries
[[bin]]
name = "setup-withdrawal-ceremony"
path = "src/bin/setup_withdrawal_ceremony.rs"

[[bin]]
name = "compute-poseidon-inputs"
path = "src/bin/compute_poseidon_inputs.rs"

[[bin]]
name = "generate-withdrawal-proof"
path = "src/bin/generate_withdrawal_proof.rs"

[[bin]]
name = "privacy-deposit"
path = "src/bin/privacy_deposit.rs"

[[bin]]
name = "privacy-withdraw"
path = "src/bin/privacy_withdraw.rs"

[[bin]]
name = "verify-privacy"
path = "src/bin/verify_privacy.rs"

# Validator binaries
[[bin]]
name = "check-validators"
path = "src/bin/check_validators.rs"

[[bin]]
name = "init-validator-registry"
path = "src/bin/init_validator_registry.rs"

[[bin]]
name = "register-validator"
path = "src/bin/register_validator.rs"

[features]
default = ["solana-bridge"]
solana-bridge = ["solana-client", "solana-sdk", "solana-transaction-status", "borsh"]

[dependencies]
# Core networking
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "quic", "noise", "yamux", "gossipsub", "request-response", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }

# Web server - compatible versions
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
hyper = "0.14"

# Serialization & Data handling
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
bincode = "1.3.3"

# Storage
rocksdb = "0.22"

# Logging & error handling
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"
anyhow = "1.0.69"

# CLI 
clap = { version = "4.1.8", features = ["derive"] }
config = "0.13.3"
toml = "0.7.3"

# Utilities
futures = "0.3.26"
async-trait = "0.1.64"
once_cell = "1.17.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
wat = "1.240" # For WASM parsing (compute demo)

# Cryptography
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"

# zkSNARK (arkworks ecosystem)
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["r1cs", "sponge"] }

# Solana dependencies (optional, enabled with solana-bridge feature)
# Using newer version to avoid dependency conflicts with arkworks
solana-client = { version = "2.0", optional = true }
solana-sdk = { version = "2.0", optional = true }
solana-transaction-status = { version = "2.0", optional = true }
borsh = { version = "1.5", optional = true }

# WASM Runtime (Phase 3: Compute Layer)
wasmtime = "26.0"

# Other
sysinfo = "0.29.0"

[dev-dependencies]
tokio-test = "0.4.2"
tempfile = "3.3.0"
wat = "1.240" # For WASM testing (Phase 3)