[package]
name = "paraloom-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.paraloom]
path = ".."

[[bin]]
name = "proof_codec_decode"
path = "fuzz_targets/proof_codec_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "merkle_path_verify"
path = "fuzz_targets/merkle_path_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wasm_output_len"
path = "fuzz_targets/wasm_output_len.rs"
test = false
doc = false
bench = false
