[workspace]

[package]
name = "paraloom-program"
version = "0.1.0"
description = "Paraloom Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "paraloom_program"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31"
ouroboros = "0.18" # Force newer version to fix soundness vulnerability
curve25519-dalek = "4.1.3" # Force newer version to fix timing side-channel vulnerability
ed25519-dalek = "2" # Upgrade to use curve25519-dalek 4.x

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
