[workspace]

[package]
name = "paraloom-program"
version = "0.1.0"
description = "Paraloom Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "paraloom_program"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# `init-if-needed` lets the first depositor of an SPL mint lazily create that
# mint's vault token account (#237); reused unchanged by every later deposit.
anchor-lang = { version = "0.31", features = ["init-if-needed"] }
# SPL-token CPIs for asset-aware deposit/withdraw into per-asset vaults (#237).
# Version-pinned to match anchor-lang 0.31 so the generated CPI types line up.
anchor-spl = "0.31"
ouroboros = "0.18" # Force newer version to fix soundness vulnerability
curve25519-dalek = "4.1.3" # Force newer version to fix timing side-channel vulnerability
ed25519-dalek = "2.2.0" # Upgrade to use curve25519-dalek 4.x
# On-chain Groth16 (BN254) verification via alt_bn128 syscalls (#165 / #249).
# Wire bytes are curve-standard, so arkworks 0.5 here interops with the 0.4
# prover in the workspace crate.
ark-bn254 = { version = "0.5", features = [] }
ark-ff = { version = "0.5", features = [] }
num-bigint = "0.4"
solana-bn254 = "2.2"

[dev-dependencies]
solana-program-test = "2.3.13"
solana-sdk = "2.0"
# Used by `tests/common::add_program_data` to bincode-serialize a fake
# `UpgradeableLoaderState::ProgramData` account so the upgrade-authority init
# constraint (#204) can be exercised under `solana-program-test`, which loads
# programs via the non-upgradeable loader and has no real ProgramData PDA.
bincode = "1"
